feat: improve webhook delivery and auth hardening